--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,10 +49,10 @@
             android:layout_height="match_parent"
             android:background="@color/entradaDados"
             android:ems="10"
+            android:hint="Senha"
             android:inputType="text"
             android:paddingLeft="15dp"
-            android:password="true"
-            android:text="Senha:" />
+            android:password="true" />
 
 
     </com.google.android.material.card.MaterialCardView>
@@ -75,9 +75,9 @@
             android:layout_height="match_parent"
             android:background="@color/entradaDados"
             android:ems="10"
+            android:hint="Nome"
             android:inputType="text"
-            android:paddingLeft="15dp"
-            android:text="Nome:" />
+            android:paddingLeft="15dp" />
 
 
     </com.google.android.material.card.MaterialCardView>
@@ -109,7 +109,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/btnCadastro"
+            android:id="@+id/btnVoltar"
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -124,7 +124,7 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/btnEsqPass"
+            android:id="@+id/btnSalvarCad"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
