--- a/app/src/main/res/layout/activity_esqueci_senha.xml
+++ b/app/src/main/res/layout/activity_esqueci_senha.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtPerfilTitulo">
 
                 <EditText
-                    android:id="@+id/editTxtNome"
+                    android:id="@+id/editTxtEmailEsq"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/entradaDados"
@@ -62,65 +62,18 @@
                     android:paddingLeft="15dp" />
             </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView4"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="30dp"
-                app:cardBackgroundColor="@color/entradaDados"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
-
-                <EditText
-                    android:id="@+id/editTxtCnpj"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/entradaDados"
-                    android:ems="10"
-                    android:inputType="text"
-                    android:paddingLeft="15dp"
-                    android:text="Nova Senha: " />
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView6"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="30dp"
-                app:cardBackgroundColor="@color/entradaDados"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView4">
-
-                <EditText
-                    android:id="@+id/editTxtCep"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/entradaDados"
-                    android:ems="10"
-                    android:inputType="text"
-                    android:paddingLeft="15dp"
-                    android:text="Confirmar Senha: " />
-
-            </com.google.android.material.card.MaterialCardView>
-
             <Button
                 android:id="@+id/btnSalvAlt"
                 android:layout_width="220dp"
                 android:layout_height="55dp"
                 android:layout_marginBottom="80dp"
                 android:onClick="clickSalvarAlt"
-                android:text="@string/strSalvarAlt"
+                android:text="Enviar Email"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView6" />
+                app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
